--- a/app/assets/stylesheets/styles/form.css.scss
+++ b/app/assets/stylesheets/styles/form.css.scss
@@ -29,7 +29,7 @@
 .event_max_spend:before, .item_price:before {
   content: '$';
   position: absolute;
-  padding: 7px 10px;
+  padding: 10px 10px;
   color: $inactive_color;
 }
 
@@ -57,6 +57,7 @@ input[type=submit].button-primary {
   background-color: $action_primary;
   border: none;
   border-radius: 0;
+  height: 4em;
 }
 
 input[type=submit].button-primary:hover {
